updates with test and results

--- a/regression/test_1/spot_price_model.ipynb
+++ b/regression/test_1/spot_price_model.ipynb
@@ -648,7 +648,7 @@
     }
    ],
    "source": [
-    "best_model = XGBRegressor(**best_params)\n",
+    "best_model = RandomForestRegressor(**best_params)\n",
     "\n",
     "# Entraîner le modèle sur les données d'entraînement complètes\n",
     "best_model.fit(X_train, y_train)\n",
